feat: update MySQL server image version in docker-compose to linux/arm64

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         - DB_NAME=mysqlDB
 
   db:
-    image: mysql/mysql-server:latest
+    image: mysql/mysql-server:8.0.32-1.2.11-server
     container_name: tickets
     restart: always
     environment:
