--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         - DB_USER=root
         - DB_PASSWORD=root
         - DB_NAME=mysqlDB
+      networks:
+      - tickets
 
   db:
     image: mysql/mysql-server:8.0.32-1.2.11-server
@@ -32,7 +34,25 @@ services:
     volumes:
       - mysql-volume:/var/lib/mysql
       - ./mysql-volume/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - tickets
+  portainer:
+    platform: linux/x86_64
+    image: portainer/portainer-ce
+    restart: always
+    ports:
+      - 9000:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    networks:
+      - tickets
 
 volumes:
   mysql-volume:
     driver: local
+  portainer_data:
+
+networks:
+  tickets:
+    driver: bridge
